--- a/index.html
+++ b/index.html
@@ -63,8 +63,12 @@
  	</div>
  	<div class="col-md-6"></div>
  	</div>
+ 	<div class="row">
+ 	<div class="col-md-6 text-center bg-warning">
+ 	<div id=lastRecord>
+ 	</div>
+ 	</div>
 </div>
 </html>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="assets/javascript/game.js"></script>
-
